@@ -1,0 +1,432 @@
+<?xml version="1.0" encoding="utf-8"?>
+<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified" attributeFormDefault="unqualified">
+
+	<!-- BASE -->
+
+	<xs:simpleType name="myboolean">
+		<xs:restriction base="xs:string">
+			<xs:enumeration value="true"/>
+			<xs:enumeration value="false"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Codigo">
+		<xs:restriction base="xs:token">
+			<xs:length value="4" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Momento">
+		<xs:restriction base="xs:int">
+			<xs:enumeration value="1" />
+			<xs:enumeration value="2" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<!-- EXTRAÇAO-->
+	<!--
+    <xs:simpleType name="Email">
+        <xs:restriction base="xs:string">
+            <xs:pattern value="[A-Za-z0-9](([_\.\-]?[a-zA-Z0-9]+)*)@([A-Za-z0-9]+)(([\.\-]?[a-zA-Z0-9]+)*)\.([A-Za-z]{2,})"/>
+            <xs:maxLength value="50" />
+        </xs:restriction>
+    </xs:simpleType>
+
+    <xs:simpleType  name="Telefone">
+        <xs:restriction base="xs:integer">
+            <xs:pattern value="\d{9}"/>
+        </xs:restriction>
+    </xs:simpleType>
+-->
+	<!-- IDENTIFICACAO-->
+
+	<xs:simpleType name="NumeroAluno">
+		<xs:restriction base="xs:token">
+			<xs:minLength value="1"/>
+			<xs:maxLength value="20"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Nome">
+		<xs:restriction base="xs:token">
+			<xs:pattern value="[a-zA-Z \D\s-]*"></xs:pattern>
+			<xs:minLength value="1"/>
+			<xs:maxLength value="255"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="NumeroIdentificacao">
+		<xs:restriction base="xs:token">
+			<xs:minLength value="1" />
+			<xs:maxLength value="30" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:complexType name="NumeroID">
+		<xs:simpleContent>
+			<xs:extension base="NumeroIdentificacao">
+				<xs:attribute name="Tipo" use="required">
+					<xs:simpleType>
+						<xs:restriction base="xs:integer">
+							<xs:enumeration value="1" />
+							<xs:enumeration value="2" />
+							<xs:enumeration value="3" />
+							<xs:enumeration value="4" />
+							<xs:enumeration value="5" />
+							<xs:enumeration value="6" />
+							<xs:enumeration value="7" />
+						</xs:restriction>
+					</xs:simpleType>
+				</xs:attribute>
+				<xs:attribute name="DigitosControlo" use="optional">
+					<xs:simpleType>
+						<xs:restriction base="xs:token">
+							<xs:maxLength value="4"/>
+						</xs:restriction>
+					</xs:simpleType>
+				</xs:attribute>
+			</xs:extension>
+		</xs:simpleContent>
+	</xs:complexType>
+
+	<xs:simpleType name="OutroTipoID">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="60"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Data">
+		<xs:restriction base="xs:date">
+			<xs:pattern value= "^(19|20)\d\d-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])$" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Sexo">
+		<xs:restriction base="xs:string">
+			<xs:enumeration value="H"/>
+			<xs:enumeration value="M"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Paises">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="2" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<!-- INSCRICAO-->
+
+	<xs:simpleType name="Curso">
+		<xs:restriction base="xs:token">
+			<xs:length value="4" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Ramo">
+		<xs:restriction base="xs:token">
+			<xs:length value="7" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="AreaInvestigacao">
+		<xs:restriction base="xs:int">
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="AnoLetivo">
+		<xs:restriction base="xs:token">
+			<xs:pattern value="\d{4}/\d{4}"/>
+			<!-- YYYY/YYYY-->
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="AnoCurricular">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="10"/>
+			<xs:enumeration value="11"/>
+			<xs:enumeration value="12"/>
+			<xs:enumeration value="13"/>
+			<xs:enumeration value="14"/>
+			<xs:enumeration value="15"/>
+			<xs:enumeration value="16"/>
+			<xs:enumeration value="17"/>
+			<xs:enumeration value="18"/>
+			<xs:enumeration value="19"/>
+			<xs:enumeration value="20"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="RegimeFrequencia">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="16"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType  name="NumInscCursos">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:totalDigits value="2"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType  name="NumInscCursosAnt">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:totalDigits value="2"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="ECTS">
+		<xs:restriction base="xs:decimal">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="999.0"/>
+			<xs:fractionDigits value="1"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="ECTSAcumulados">
+		<xs:restriction base="xs:decimal">
+			<xs:minInclusive value="0"/>
+			<xs:maxInclusive value="999.0"/>
+			<xs:fractionDigits value="1"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Bolseiro">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="16"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="FormaIngresso">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="10"/>
+			<xs:enumeration value="13"/>
+			<xs:enumeration value="15"/>
+			<xs:enumeration value="16"/>
+			<xs:enumeration value="17"/>
+			<xs:enumeration value="21"/>
+			<xs:enumeration value="22"/>
+			<xs:enumeration value="24"/>
+			<xs:enumeration value="25"/>
+			<xs:enumeration value="26"/>
+			<xs:enumeration value="29"/>
+			<xs:enumeration value="30"/>
+			<xs:enumeration value="33"/>
+			<xs:enumeration value="34"/>
+			<xs:enumeration value="35"/>
+			<xs:enumeration value="36"/>
+			<xs:enumeration value="37"/>
+			<xs:enumeration value="38"/>
+      <xs:enumeration value="39"/>
+			<xs:enumeration value="40"/>
+			<xs:enumeration value="41"/>
+			<xs:enumeration value="42"/>
+			<xs:enumeration value="43"/>
+      <xs:enumeration value="44"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="NotaIngresso">
+		<xs:restriction base="xs:decimal">
+			<xs:minInclusive value="95.0"/>
+			<xs:maxInclusive value="200.0"/>
+			<xs:fractionDigits value="1"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="OpcaoIngresso">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="6"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="AnoUltimaInscricao">
+		<xs:restriction base="xs:token">
+			<xs:pattern value="\d{4}/\d{4}"/>
+			<!-- YYYY/YYYY-->
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="EstadoCivil">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType  name="Concelho">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Escolaridade">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="31"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Condicao">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="19"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Profissao">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="2" />
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="EscolaridadeAnterior">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="30"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Outro">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="80"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="AnoEscolaridadeAnt">
+		<xs:restriction base="xs:integer">
+			<xs:totalDigits value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="TipoEstabSec">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="1"/>
+			<xs:enumeration value="2"/>
+			<xs:enumeration value="3"/>
+		</xs:restriction>
+	</xs:simpleType>
+	<xs:simpleType  name="EstabEscolaridadeAnt">
+		<xs:restriction base="xs:integer">
+			<xs:totalDigits value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="NumeroInscricoes">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="99"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="OutroAux">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="255"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType  name="CursoEscolarAnt">
+		<xs:restriction base="xs:integer">
+			<xs:totalDigits value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType  name="Estabelecimento">
+		<xs:restriction base="xs:integer">
+			<xs:totalDigits value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<!--  DIPLOMADOS-->
+
+	<xs:simpleType  name="NumInscConclusao">
+		<xs:restriction base="xs:integer">
+			<xs:totalDigits value="2"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Classificacao">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="10"/>
+			<xs:maxInclusive value="29"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="Datas">
+		<xs:restriction base="xs:date">
+			<xs:pattern value= "(19|20)\d\d-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="TipoMobilidadeCredito">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="1"/>
+			<xs:enumeration value="2"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="ProgMobilidadeCredito">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="1"/>
+			<xs:enumeration value="2"/>
+			<xs:enumeration value="3"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="OutroProgMobCredito">
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="80"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<!-- MOBILIDADE INTERNACIONAL-->
+
+	<xs:simpleType name="AreaCientifica">
+		<!--Alterado de int para string -> AreaCNAEF-->
+		<xs:restriction base="xs:token">
+			<xs:maxLength value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="DuracaoPrograma">
+		<xs:restriction base="xs:string">
+			<xs:enumeration value="T"/>
+			<xs:enumeration value="S"/>
+			<xs:enumeration value="A"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="NivelFormacaoOrigem">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="4"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="NivelFormacaoDestino">
+		<xs:restriction base="xs:integer">
+			<xs:minInclusive value="1"/>
+			<xs:maxInclusive value="5"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="ProgMobilidade">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="1"/>
+			<xs:enumeration value="2"/>
+			<xs:enumeration value="3"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+	<xs:simpleType name="TipoProgMobilidade">
+		<xs:restriction base="xs:integer">
+			<xs:enumeration value="1"/>
+			<xs:enumeration value="2"/>
+		</xs:restriction>
+	</xs:simpleType>
+
+</xs:schema>
