@@ -1,3 +1,5 @@
+- Refactor: Update XSD to RAIDES24 (phase 1) [#UL-REIT-4706]
+
 2.26.7 (16-12-2025)
 - Refactor: Remove competence course information hardcoded field references and replace with dynamic field access [#qubIT-Fenix-6448]
 
